--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -5,5 +5,81 @@
     "Price": "Price",
     "Piece": "Piece",
     "DARK": "Dark",
-    "LIGHT": "Light"
+    "LIGHT": "Light",
+
+    "Use new secondhand books at great prices and find them near you.":"Use new used books at great prices and find them near you.",
+    "Easily find the recipient of your secondhand book.":"Easily find the recipient of your secondhand book.",
+    "Enjoy your new and cheap book.":"Enjoy your new and cheap book.",
+    "Available and Easily":"Available and Easily",
+    "Near and Cheap":"Near and Cheap",
+    "Enjoy..":"Enjoy..",
+    "Skip":"Skip",
+    "Let's Start":"Let's Start",
+    
+    "Sing in":"Sing in",
+    "Sing up":"Sing up",
+    "E-mail":"E-mail",
+    "Password":"Password",
+    "Enter E-mail":"Enter E-mail",
+    "Enter Password":"Enter Password",
+    "Forgotten Pasword ?":"Forgotten Pasword ?",
+    "Visit":"Visit",
+    "OR":"OR",
+
+    "First & Last Name":"First & Last Name",
+    "Mobile Phone":"Mobile Phone",
+    "Group Special Code (optional)":"Group Special Code (optional)",
+    "Please sign me up for the monthly newsletter.":"Please sign me up for the monthly newsletter.",
+
+    "Categories":"Categories",
+    "Business":"Business",
+    "Children":"Children",
+    "Graphic Novels":"Graphic Novels",
+    "Politics":"Politics",
+    "History":"History",
+    "Sci-fi":"Sci-fi",
+    "Send":"Send",
+
+    "Main Page":"Main Page",
+    
+    "Buy":"Buy",
+    "Give Offer":"Give Offer",
+
+    "Notifications":"Notifications",
+    "To Contact":"To Contact",
+
+    "Call Now":"Call Now",
+
+
+    "About":"About",
+    "Overview":"Overview",
+    "Reviews":"Reviews",
+    "ISBN":"ISBN",
+    "Release Date":"Release Date",
+    "Number of Prints":"Number of Prints",
+    "Language":"Language",
+    "Binding Type":"Binding Type",
+    "Paper Type":"Paper Type",
+    "Book Size":"Book Size",
+    "Related Products":"Related Products",
+    "Write a Review":"Write a Review",
+
+    
+    "Cancel":"Cancel",
+    "Scan":"Scan",
+
+    "Sell Book":"Sell Book",
+    "Sell the Product":"Sell the Product",
+
+    "Remove":"Remove",
+    "Contact":"Contact",
+    "Offers":"Offers",
+    "General":"General",
+    "hours ago":"hours ago",
+
+    "Edit Profile":"Edit Profile",
+    "My Advertisement":"My Advertisement",
+    "Favorites":"Favorites",
+    "Change Password":"Change Password",
+    "Log Out":"Log Out"
 }
